Fixed a bug that caused a flickering on the 'header'

--- a/themes/jakob.codes/source/css/styles.less
+++ b/themes/jakob.codes/source/css/styles.less
@@ -138,7 +138,7 @@ header {
     height: 100%;
     overflow: hidden;
 
-    @media (max-width: 425px) {
+    @media (max-width: 460px) {
       background-image: url('../img/background-freezeframe.jpg');
       background-size: cover;
       background-position: center;
